Fixed lion scrollbar. Updated docs.

--- a/_sass/components/_menu.scss
+++ b/_sass/components/_menu.scss
@@ -48,7 +48,8 @@
       text-decoration: none;
     }
 
-    &:hover {
+    &:hover,
+    &.-active {
       background: $off-gray;
     }
   }
